# VentureNerve

./: README.md  pyproject.toml
app/src/: Layout.jsx  pages.config.js
app/src/components/: mockData.jsx
app/src/components/charts/: StressTestChart.jsx
app/src/components/chatbot/: AIChatbot.jsx
app/src/components/layout/: MobileNav.jsx  Sidebar.jsx
app/src/components/ui/: MetricCard.jsx
app/src/pages/: InvestorProfile.jsx  Landing.jsx  MatchResults.jsx  Methodology.jsx  Portfolio.jsx  StartupDetail.jsx
src/: Backend
src/vs_sim/: __init__.py  investor_metrics.py  plotting.py  portfolio.py  portfolio_builder.py  ranking.py  startup_mc.py  vc_simulator.py
