[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vs-sim"
version = "0.1.0"
description = "Hackathon VC / startup Monte Carlo simulator + portfolio recommender (ROI-first)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Your Team" }]
dependencies = [
  "numpy>=1.24",
  "plotly>=5.18",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
