[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "venture-nerve"
version = "0.1.0"
description = "Quantitative venture capital simulator for startup fragility analysis and portfolio construction using Monte Carlo modelling."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
    { name = "Shrivar Singh, Iakov Bondyaev, Shen Jie Yaw" }
]

dependencies = [
    "numpy>=1.24",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
